--- a/pages/echo.html
+++ b/pages/echo.html
@@ -28,12 +28,12 @@
 <!--suppress JSUnresolvedReference -->
 <script>
     id_button_refresh.onclick = () => {
-        id_text_head.innerText = "";
-        id_text_url.innerText = "";
-        id_text_ua.innerText = "";
-        id_text_head.innerText = document.firstElementChild.innerHTML;
-        id_text_url.innerText = location.href;
-        id_text_ua.innerText = navigator.userAgent;
+        id_text_head.innerText = ''
+        id_text_url.innerText = ''
+        id_text_ua.innerText = ''
+        id_text_head.innerText = document.firstElementChild.innerHTML
+        id_text_url.innerText = location.href
+        id_text_ua.innerText = navigator.userAgent
     }
 </script>
 </body>
