--- a/pages/echo.html
+++ b/pages/echo.html
@@ -13,6 +13,7 @@
 
         button {
             height: 100px;
+            padding-top: 20px;
             width: 200px;
         }
     </style>
