--- a/pages/echo.html
+++ b/pages/echo.html
@@ -13,7 +13,7 @@
 
         button {
             height: 100px;
-            padding-top: 20px;
+            margin-top: 20px;
             width: 200px;
         }
     </style>
