--- a/echo.html
+++ b/echo.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=500, user-scalable=no"/>
+    <meta name="viewport" content="width=500"/>
     <title>echo html</title>
     <style>
         div {
