--- a/password.html
+++ b/password.html
@@ -39,9 +39,15 @@
         return result.join('')
     }
 
-    id_button_gen16.onclick = () => id_textarea_password.innerText = randomText(16)
-    id_button_gen24.onclick = () => id_textarea_password.innerText = randomText(24)
-    id_button_gen32.onclick = () => id_textarea_password.innerText = randomText(32)
+    id_button_gen16.onclick = () => {
+        id_textarea_password.innerText = randomText(16)
+    }
+    id_button_gen24.onclick = () => {
+        id_textarea_password.innerText = randomText(24)
+    }
+    id_button_gen32.onclick = () => {
+        id_textarea_password.innerText = randomText(32)
+    }
 </script>
 </body>
 </html>
