--- a/crypto/password.html
+++ b/crypto/password.html
@@ -22,23 +22,10 @@
 <!--suppress HtmlFormInputWithoutLabel -->
 <textarea id="id_textarea_password" readonly="readonly">
 </textarea>
+<script src="crypto.1.js">
+</script>
 <!--suppress JSUnresolvedReference -->
 <script>
-    function randomBytes(length) {
-        const result = new Uint8Array(length)
-        return crypto.getRandomValues(result)
-    }
-
-    function randomText(length) {
-        const bytes = randomBytes(length)
-        const template = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789'
-        const result = []
-        for (const byte of bytes) {
-            result.push(template[byte % 62])
-        }
-        return result.join('')
-    }
-
     id_button_gen16.onclick = () => {
         id_textarea_password.innerText = randomText(16)
     }
