--- a/crypto/password.html
+++ b/crypto/password.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!--suppress HtmlFormInputWithoutLabel -->
+<!--suppress JSUnresolvedReference -->
 <html lang="zh-CN">
 <head>
     <meta charset="utf-8"/>
@@ -15,26 +17,67 @@
 <h2>密码生成工具</h2>
 <p>密码在您的浏览器中生成，不会上传到服务器，请放心使用</p>
 <p>
+    <input id="id_include_1" type="checkbox" checked/>
+    <label for="id_include_1">包含数字</label>
+    <input id="id_include_2" type="checkbox" checked/>
+    <label for="id_include_2">包含大写字母</label>
+    <input id="id_include_3" type="checkbox" checked/>
+    <label for="id_include_3">包含小写字母</label>
+    <input id="id_include_4" type="checkbox"/>
+    <label for="id_include_4">包含数字区符号</label>
+    <input id="id_include_5" type="checkbox"/>
+    <label for="id_include_5">包含字母区符号</label>
+</p>
+<p>
     <button id="id_button_gen16">生成16位密码</button>
     <button id="id_button_gen24">生成24位密码</button>
     <button id="id_button_gen32">生成32位密码</button>
 </p>
-<!--suppress HtmlFormInputWithoutLabel -->
 <textarea id="id_textarea_password" readonly="readonly">
 </textarea>
-<script src="crypto.1.js">
-</script>
-<!--suppress JSUnresolvedReference -->
 <script>
-    id_button_gen16.onclick = () => {
-        id_textarea_password.innerText = randomText(16)
+    function randomBytes(length) {
+        const bytes = new Uint8Array(length)
+        return crypto.getRandomValues(bytes)
     }
-    id_button_gen24.onclick = () => {
-        id_textarea_password.innerText = randomText(24)
+
+    function formatBytes(bytes, range) {
+        const result = []
+        const table = range.join('')
+        for (const byte of bytes) {
+            result.push(table[byte % table.length])
+        }
+        return result.join('')
     }
-    id_button_gen32.onclick = () => {
-        id_textarea_password.innerText = randomText(32)
+
+    function doGenerate(length) {
+        const range = []
+        if (id_include_1.checked) {
+            range.push('0123456789')
+        }
+        if (id_include_2.checked) {
+            range.push('ABCDEFGHIJKLMNOPQRSTUVWXYZ')
+        }
+        if (id_include_3.checked) {
+            range.push('abcdefghijklmnopqrstuvwxyz')
+        }
+        if (id_include_4.checked) {
+            range.push('!@#$%^&*()')
+        }
+        if (id_include_5.checked) {
+            range.push('-=_+,./<>?;:[]{}')
+        }
+        if (range.length) {
+            const bytes = randomBytes(length)
+            id_textarea_password.innerText = formatBytes(bytes, range)
+        } else {
+            id_textarea_password.innerText = ''
+        }
     }
+
+    id_button_gen16.onclick = () => doGenerate(16)
+    id_button_gen24.onclick = () => doGenerate(24)
+    id_button_gen32.onclick = () => doGenerate(32)
 </script>
 </body>
 </html>
