--- a/crypto/password.html
+++ b/crypto/password.html
@@ -17,11 +17,11 @@
 <h2>密码生成工具</h2>
 <p>密码在您的浏览器中生成，不会上传到服务器，请放心使用</p>
 <p>
-    <input id="id_include_1" type="checkbox" checked/>
+    <input checked id="id_include_1" type="checkbox"/>
     <label for="id_include_1">包含数字</label>
-    <input id="id_include_2" type="checkbox" checked/>
+    <input checked id="id_include_2" type="checkbox"/>
     <label for="id_include_2">包含大写字母</label>
-    <input id="id_include_3" type="checkbox" checked/>
+    <input checked id="id_include_3" type="checkbox"/>
     <label for="id_include_3">包含小写字母</label>
     <input id="id_include_4" type="checkbox"/>
     <label for="id_include_4">包含数字区符号</label>
