--- a/crypto/password.html
+++ b/crypto/password.html
@@ -41,16 +41,16 @@
         return crypto.getRandomValues(bytes)
     }
 
-    function formatBytes(bytes, range) {
+    function randomText(length, table) {
+        const bytes = randomBytes(length)
         const result = []
-        const table = range.join('')
         for (const byte of bytes) {
             result.push(table[byte % table.length])
         }
         return result.join('')
     }
 
-    function doGenerate(length) {
+    function randomClick(length) {
         const range = []
         if (id_include_1.checked) {
             range.push('0123456789')
@@ -67,17 +67,17 @@
         if (id_include_5.checked) {
             range.push('-=_+,./<>?;:[]{}')
         }
-        if (range.length) {
-            const bytes = randomBytes(length)
-            id_textarea_password.innerText = formatBytes(bytes, range)
+        const table = range.join('')
+        if (table) {
+            id_textarea_password.innerText = randomText(length, table)
         } else {
             id_textarea_password.innerText = ''
         }
     }
 
-    id_button_gen16.onclick = () => doGenerate(16)
-    id_button_gen24.onclick = () => doGenerate(24)
-    id_button_gen32.onclick = () => doGenerate(32)
+    id_button_gen16.onclick = () => randomClick(16)
+    id_button_gen24.onclick = () => randomClick(24)
+    id_button_gen32.onclick = () => randomClick(32)
 </script>
 </body>
 </html>
