--- a/crypto/password.html
+++ b/crypto/password.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-<!--suppress HtmlFormInputWithoutLabel -->
-<!--suppress JSUnresolvedReference -->
 <html lang="zh-CN">
 <head>
     <meta charset="utf-8"/>
@@ -33,51 +31,52 @@
     <button id="id_button_gen24">生成24位密码</button>
     <button id="id_button_gen32">生成32位密码</button>
 </p>
+<label for="id_textarea_password"></label>
 <textarea id="id_textarea_password" readonly="readonly">
 </textarea>
+<script src="crypto1.js">
+</script>
 <script>
-    function randomBytes(length) {
-        const bytes = new Uint8Array(length)
-        return crypto.getRandomValues(bytes)
-    }
+    onload = () => {
+        const include1 = document.getElementById('id_include_1')
+        const include2 = document.getElementById('id_include_2')
+        const include3 = document.getElementById('id_include_3')
+        const include4 = document.getElementById('id_include_4')
+        const include5 = document.getElementById('id_include_5')
+        const buttonGen16 = document.getElementById('id_button_gen16')
+        const buttonGen24 = document.getElementById('id_button_gen24')
+        const buttonGen32 = document.getElementById('id_button_gen32')
+        const outputPassword = document.getElementById('id_textarea_password')
 
-    function randomText(length, table) {
-        const bytes = randomBytes(length)
-        const result = []
-        for (const byte of bytes) {
-            result.push(table[byte % table.length])
+        function randomClick(length) {
+            const range = []
+            if (include1.checked) {
+                range.push('0123456789')
+            }
+            if (include2.checked) {
+                range.push('ABCDEFGHIJKLMNOPQRSTUVWXYZ')
+            }
+            if (include3.checked) {
+                range.push('abcdefghijklmnopqrstuvwxyz')
+            }
+            if (include4.checked) {
+                range.push('!@#$%^&*()')
+            }
+            if (include5.checked) {
+                range.push('-=_+,./<>?;:[]{}')
+            }
+            const table = range.join('')
+            if (table) {
+                outputPassword.innerText = randomTable(length, table)
+            } else {
+                outputPassword.innerText = ''
+            }
         }
-        return result.join('')
-    }
 
-    function randomClick(length) {
-        const range = []
-        if (id_include_1.checked) {
-            range.push('0123456789')
-        }
-        if (id_include_2.checked) {
-            range.push('ABCDEFGHIJKLMNOPQRSTUVWXYZ')
-        }
-        if (id_include_3.checked) {
-            range.push('abcdefghijklmnopqrstuvwxyz')
-        }
-        if (id_include_4.checked) {
-            range.push('!@#$%^&*()')
-        }
-        if (id_include_5.checked) {
-            range.push('-=_+,./<>?;:[]{}')
-        }
-        const table = range.join('')
-        if (table) {
-            id_textarea_password.innerText = randomText(length, table)
-        } else {
-            id_textarea_password.innerText = ''
-        }
+        buttonGen16.onclick = () => randomClick(16)
+        buttonGen24.onclick = () => randomClick(24)
+        buttonGen32.onclick = () => randomClick(32)
     }
-
-    id_button_gen16.onclick = () => randomClick(16)
-    id_button_gen24.onclick = () => randomClick(24)
-    id_button_gen32.onclick = () => randomClick(32)
 </script>
 </body>
 </html>
